fix: remove p from link in footer, add class of that p to link

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -24,8 +24,8 @@
 			</div>
 			
 			<div>
-				<a href="https://rs.school/courses/javascript-ru" target="_blank">
-					<p class="caption dark">Made in Rolling Scopes School</p>
+				<a class="caption dark" href="https://rs.school/courses/javascript-ru" target="_blank">
+					Made in Rolling Scopes School
 				</a>
 			</div>
 		</footer>
