--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="!#">
+			<a href="!#" class="logo-link">
 			<div class="logo-div">
 				<img src="./assets/svg/snowflake.svg" alt="Snowflake" class="logo">
 				<h1 class="action-s">the gifts</h1>
@@ -20,10 +20,10 @@
 
 			<nav>
 				<ul class="nav-list">
-					<li class="nav-item"><a href="./gifts.html" target="_blank">gifts</a></li>
-					<li class="nav-item"><a href="#about">about</a></li>
-					<li class="nav-item"><a href="#best">best</a></li>
-					<li class="nav-item"><a href="#contacts">contacts</a></li>
+					<li class="nav-item action-s"><a href="./gifts.html" target="_blank">gifts</a></li>
+					<li class="nav-item action-s"><a href="#about">about</a></li>
+					<li class="nav-item action-s"><a href="#best">best</a></li>
+					<li class="nav-item action-s"><a href="#contacts">contacts</a></li>
 				</ul>
 			</nav>
 		</header>
