fix: change h1 in header to h2, change class of logo in header to icon

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -13,8 +13,8 @@
 		<header>
 			<a href="!#" class="logo-link">
 			<div class="logo-div">
-				<img src="./assets/svg/snowflake.svg" alt="Snowflake" class="logo">
-				<h1 class="action-s">the gifts</h1>
+				<img src="./assets/svg/snowflake.svg" alt="Snowflake" class="icon">
+				<h2 class="action-s">the gifts</h2>
 			</div>
 			</a>
 
