feat: add hero section in main

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -29,7 +29,14 @@
 		</header>
 		
 		<main>
-			<div></div>
+			<section class="hero">
+				<div class="hero-div">
+					<p class="caption light">Merry Christmas</p>
+					<h1 class="light">Gift yourself <br>the magic of new <br>possibilities</h1>
+					<button class="action-s btn-explore">Explore Magical Gifts</button>
+					<p class="caption light">and Happy New Year</p>
+				</div>
+			</section>
 		</main>
 		
 		<footer>
