fix: change contents in footer, add icons to socials

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -40,15 +40,29 @@
 		</main>
 		
 		<footer>
-			<div>
-				<p class="dark">&copy; Copyright 2025, All Rights Reserved</p>
-			</div>
-			
-			<div>
-				<a class="caption dark" href="https://rs.school/courses/javascript-ru" target="_blank">
-					Made in Rolling Scopes School
+			<div class="div-socials">
+				<a href="telegram.com" target="_blank">
+					<div class="icon-div"><img src="./assets/svg/socials/telegram.svg" class="icon socials" alt="Telegram"></div>
+				</a>
+
+				<a href="facebook.com" target="_blank">
+					<div class="icon-div"><img src="./assets/svg/socials/facebook.svg" class="icon socials" alt="NelzyaBook"></div>
+				</a>
+
+				<a href="instagram.com" target="_blank">
+					<div class="icon-div"><img src="./assets/svg/socials/instagram.svg" class="icon socials" alt="NelzyaGram"></div>
+				</a>
+
+				<a href="x.com" target="_blank">
+					<div class="icon-div"><img src="./assets/svg/socials/xwitter.svg" class="icon socials" alt="BolscheNeTwitter"></div>
 				</a>
 			</div>
+
+			<p class="dark">&copy; Copyright 2025, All Rights Reserved</p>
+
+			<a class="caption dark" href="https://rs.school/courses/javascript-ru" target="_blank">
+				Made in Rolling Scopes School
+			</a>
 		</footer>
 	</body>
 </html>
