feat: add about section

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -37,6 +37,18 @@
 					<p class="caption light">and Happy New Year</p>
 				</div>
 			</section>
+
+			<section class="about">
+				<div class="about-div">
+					<div class="about-text">
+						<p class="caption coral">About</p>
+						<h2 class="dark">Unleash your inner superhero!</h2>
+						<p class="dark">This New Year marks the beginning of your journey to inner harmony and new strengths. We offer unique gifts that will help you improve your life.</p>
+					</div>
+
+					<img src="./assets/png/santa.png" class="pic" alt="Snowperson with Santa">
+				</div>
+			</section>
 		</main>
 		
 		<footer>
