feat: add contacts in footer

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -52,6 +52,32 @@
 		</main>
 		
 		<footer>
+			<div class="contacts">
+				<a href="tel:+375 (29) 111-22-33" target="_blank">
+					<div class="contact-card">
+						<img src="./assets/svg/footer-pics/santa-claus.svg" class="contact-pic" alt="Santa Claus">
+						<p class="action-l dark">+375 (29) 111-22-33</p>
+						<h3 class="dark">Call Us</h3>
+					</div>
+				</a>
+
+				<a href="" target="_blank">
+					<div class="contact-card">
+						<img src="./assets/svg/footer-pics/christmas-tree.svg" class="contact-pic" alt="Christmas Tree">
+						<p class="action-l dark">Magic forest</p>
+						<h3 class="dark">Meet Us</h3>
+					</div>
+				</a>
+
+				<a href="mailto:gifts@magic.com" target="_blank">
+					<div class="contact-card">
+						<img src="./assets/svg/footer-pics/snake.svg" class="contact-pic" alt="Snake">
+						<p class="action-l dark">gifts@magic.com</p>
+						<h3 class="dark">Write Us</h3>
+					</div>
+				</a>
+			</div>
+
 			<div class="div-socials">
 				<a href="telegram.com" target="_blank">
 					<div class="icon-div"><img src="./assets/svg/socials/telegram.svg" class="icon socials" alt="Telegram"></div>
