--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -53,7 +53,7 @@
 		
 		<footer>
 			<div class="contacts">
-				<a href="tel:+375 (29) 111-22-33" target="_blank">
+				<a href="tel:+375291112233" target="_blank">
 					<div class="contact-card">
 						<img src="./assets/svg/footer-pics/santa-claus.svg" class="contact-pic" alt="Santa Claus">
 						<p class="action-l dark">+375 (29) 111-22-33</p>
