--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -20,10 +20,10 @@
 
 			<nav>
 				<ul class="nav-list">
-					<li class="nav-item action-s"><a href="./gifts.html" target="_blank">gifts</a></li>
+					<li class="nav-item action-s"><a href="./gifts.html">gifts</a></li>
 					<li class="nav-item action-s"><a href="#about">about</a></li>
 					<li class="nav-item action-s"><a href="#best">best</a></li>
-					<li class="nav-item action-s"><a href="#contacts">contacts</a></li>
+					<li class="nav-item action-s"><a href="#contact">contacts</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -38,7 +38,7 @@
 				</div>
 			</section>
 
-			<section class="about">
+			<section class="about" id="about">
 				<div class="about-div">
 					<div class="about-text">
 						<p class="caption coral">About</p>
@@ -51,7 +51,7 @@
 			</section>
 		</main>
 		
-		<footer>
+		<footer id="contact">
 			<div class="contacts">
 				<a href="tel:+375291112233" target="_blank">
 					<div class="contact-card">
