--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -33,7 +33,7 @@
 				<div class="hero-div">
 					<p class="caption light">Merry Christmas</p>
 					<h1 class="light">Gift yourself <br>the magic of new <br>possibilities</h1>
-					<button class="action-s btn-explore">Explore Magical Gifts</button>
+					<a hraf="./gifts.html" class="action-s btn-explore">Explore Magical Gifts</a>
 					<p class="caption light">and Happy New Year</p>
 				</div>
 			</section>
