--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -80,20 +80,20 @@
 
 			<div class="footer-bottom">
 				<div class="div-socials">
-					<a href="telegram.com" target="_blank">
+					<a href="https://t.me/AfishaRSSchool" target="_blank">
 						<div class="icon-div"><img src="./assets/svg/socials/telegram.svg" class="icon socials" alt="Telegram"></div>
 					</a>
 
-					<a href="facebook.com" target="_blank">
+					<a href="https://www.facebook.com/groups/TheRollingScopes" target="_blank">
 						<div class="icon-div"><img src="./assets/svg/socials/facebook.svg" class="icon socials" alt="NelzyaBook"></div>
 					</a>
 
-					<a href="instagram.com" target="_blank">
+					<a href="https://www.instagram.com/rollingscopes/" target="_blank">
 						<div class="icon-div"><img src="./assets/svg/socials/instagram.svg" class="icon socials" alt="NelzyaGram"></div>
 					</a>
 
-					<a href="x.com" target="_blank">
-						<div class="icon-div"><img src="./assets/svg/socials/xwitter.svg" class="icon socials" alt="BolscheNeTwitter"></div>
+					<a href="https://twitter.com/EPAMSYSTEMS" target="_blank">
+						<div class="icon-div"><img src="./assets/svg/socials/xwitter.svg" class="icon socials" alt="Twitter"></div>
 					</a>
 				</div>
 
