feat: add header and replace footer, taken from home page with modifications

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -11,19 +11,75 @@
 	</head>
 	<body>
 		<header>
-			<div></div>
+			<a href="./home.html" class="logo-link">
+			<div class="logo-div">
+				<img src="./assets/svg/snowflake.svg" alt="Snowflake" class="icon">
+				<h2 class="action-s">the gifts</h2>
+			</div>
+			</a>
+
+			<nav>
+				<ul class="nav-list">
+					<li class="nav-item-active action-s">gifts</li>
+					<li class="nav-item action-s"><a href="./home.html/#about">about</a></li>
+					<li class="nav-item action-s"><a href="./home.html/#best">best</a></li>
+					<li class="nav-item action-s"><a href="#contact">contacts</a></li>
+				</ul>
+			</nav>
 		</header>
 		
 		<main>
 			<div></div>
 		</main>
 		
-		<footer>
-			<div>
-				<p class="dark">&copy; Copyright 2025, All Rights Reserved</p>
+		<footer id="contact">
+			<div class="contacts">
+				<a href="tel:+375291112233" target="_blank">
+					<div class="contact-card">
+						<img src="./assets/svg/footer-pics/santa-claus.svg" class="contact-pic" alt="Santa Claus">
+						<p class="action-l dark">+375 (29) 111-22-33</p>
+						<h3 class="dark">Call Us</h3>
+					</div>
+				</a>
+
+				<a href="" target="_blank">
+					<div class="contact-card">
+						<img src="./assets/svg/footer-pics/christmas-tree.svg" class="contact-pic" alt="Christmas Tree">
+						<p class="action-l dark">Magic forest</p>
+						<h3 class="dark">Meet Us</h3>
+					</div>
+				</a>
+
+				<a href="mailto:gifts@magic.com" target="_blank">
+					<div class="contact-card">
+						<img src="./assets/svg/footer-pics/snake.svg" class="contact-pic" alt="Snake">
+						<p class="action-l dark">gifts@magic.com</p>
+						<h3 class="dark">Write Us</h3>
+					</div>
+				</a>
 			</div>
-			
-			<div>
+
+			<div class="footer-bottom">
+				<div class="div-socials">
+					<a href="https://t.me/AfishaRSSchool" target="_blank">
+						<div class="icon-div"><img src="./assets/svg/socials/telegram.svg" class="icon socials" alt="Telegram"></div>
+					</a>
+
+					<a href="https://www.facebook.com/groups/TheRollingScopes" target="_blank">
+						<div class="icon-div"><img src="./assets/svg/socials/facebook.svg" class="icon socials" alt="NelzyaBook"></div>
+					</a>
+
+					<a href="https://www.instagram.com/rollingscopes/" target="_blank">
+						<div class="icon-div"><img src="./assets/svg/socials/instagram.svg" class="icon socials" alt="NelzyaGram"></div>
+					</a>
+
+					<a href="https://twitter.com/EPAMSYSTEMS" target="_blank">
+						<div class="icon-div"><img src="./assets/svg/socials/xwitter.svg" class="icon socials" alt="Twitter"></div>
+					</a>
+				</div>
+
+				<p class="dark">&copy; Copyright 2025, All Rights Reserved</p>
+
 				<a class="caption dark" href="https://rs.school/courses/javascript-ru" target="_blank">
 					Made in Rolling Scopes School
 				</a>
