feat: add link to google maps

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -42,7 +42,7 @@
 					</div>
 				</a>
 
-				<a href="" target="_blank">
+				<a href="https://maps.app.goo.gl/PU7ck47iFwm6rwRJ9" target="_blank">
 					<div class="contact-card">
 						<img src="./assets/svg/footer-pics/christmas-tree.svg" class="contact-pic" alt="Christmas Tree">
 						<p class="action-l dark">Magic forest</p>
