fix: rework navigation on home page (move a and li tags)

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -20,10 +20,10 @@
 
 			<nav>
 				<ul class="nav-list">
-					<li class="nav-item action-s"><a href="./gifts.html">gifts</a></li>
-					<li class="nav-item action-s"><a href="#about">about</a></li>
-					<li class="nav-item action-s"><a href="#best">best</a></li>
-					<li class="nav-item action-s"><a href="#contact">contacts</a></li>
+					<a href="./gifts.html"><li class="nav-item action-s">gifts</li></a>
+					<a href="#about"><li class="nav-item action-s">about</li></a>
+					<a href="#best"><li class="nav-item action-s">best</li></a>
+					<a href="#contact"><li class="nav-item action-s">contacts</li></a>
 				</ul>
 			</nav>
 		</header>
