fix: change links in navigation

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -21,8 +21,8 @@
 			<nav>
 				<ul class="nav-list">
 					<li class="nav-item-active action-s">gifts</li>
-					<li class="nav-item action-s"><a href="./home.html/#about">about</a></li>
-					<li class="nav-item action-s"><a href="./home.html/#best">best</a></li>
+					<li class="nav-item action-s"><a href="./home.html#about">about</a></li>
+					<li class="nav-item action-s"><a href="./home.html#best">best</a></li>
 					<li class="nav-item action-s"><a href="#contact">contacts</a></li>
 				</ul>
 			</nav>
