fix: add link style to "a" at bottom of footer

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -99,7 +99,7 @@
 
 				<p class="dark">&copy; Copyright 2025, All Rights Reserved</p>
 
-				<a class="caption dark" href="https://rs.school/courses/javascript-ru" target="_blank">
+				<a class="caption dark link" href="https://rs.school/courses/javascript-ru" target="_blank">
 					Made in Rolling Scopes School
 				</a>
 			</div>
