fix: rework navigation on gifts page (move a and li tags)

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -21,9 +21,9 @@
 			<nav>
 				<ul class="nav-list">
 					<li class="nav-item-active action-s">gifts</li>
-					<li class="nav-item action-s"><a href="./home.html#about">about</a></li>
-					<li class="nav-item action-s"><a href="./home.html#best">best</a></li>
-					<li class="nav-item action-s"><a href="#contact">contacts</a></li>
+					<a href="./home.html#about"><li class="nav-item action-s">about</li></a>
+					<a href="./home.html#best"><li class="nav-item action-s">best</li></a>
+					<a href="#contact"><li class="nav-item action-s">contacts</li></a>
 				</ul>
 			</nav>
 		</header>
