feat: add contents to main-container with one gift-card

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -28,8 +28,25 @@
 			</nav>
 		</header>
 		
-		<main>
-			<div></div>
+		<main class="gifts-main">
+			<h1 class="light">Achieve health,<br> harmony, and<br> inner strength</h1>
+
+			<ul class="nav-list">
+				<li class="action-s light nav-gift-item-active">All</li>
+				<li class="action-s light nav-gift-item">For Work</li>
+				<li class="action-s light nav-gift-item">For Health</li>
+				<li class="action-s light nav-gift-item">For Harmony</li>
+			</ul>
+
+			<div class="gifts-container">
+				<div class="gift-card">
+					<img src="./assets/png/gift/for-work.png" class="gift-pic" alt="Gift">
+					<div class="gift-text">
+						<h4 class="work"></h4>
+						<h3 class="dark"></h3>
+					</div>
+				</div>
+			</div>
 		</main>
 		
 		<footer id="contact">
