fix: rework navigation back (move a and li tags, exchange their class states)

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -20,10 +20,10 @@
 
 			<nav>
 				<ul class="nav-list">
-					<a href="./gifts.html"><li class="nav-item action-s">gifts</li></a>
-					<a href="#about"><li class="nav-item action-s">about</li></a>
-					<a href="#best"><li class="nav-item action-s">best</li></a>
-					<a href="#contact"><li class="nav-item action-s">contacts</li></a>
+					<li><a href="./gifts.html" class="nav-item action-s">gifts</a></li>
+					<li><a href="#about" class="nav-item action-s">about</a></li>
+					<li><a href="#best" class="nav-item action-s">best</a></li>
+					<li><a href="#contact" class="nav-item action-s">contacts</a></li>
 				</ul>
 			</nav>
 		</header>
