--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -21,9 +21,9 @@
 			<nav>
 				<ul class="nav-list">
 					<li class="nav-item-active action-s">gifts</li>
-					<a href="./home.html#about"><li class="nav-item action-s">about</li></a>
-					<a href="./home.html#best"><li class="nav-item action-s">best</li></a>
-					<a href="#contact"><li class="nav-item action-s">contacts</li></a>
+					<li><a href="./home.html#about" class="nav-item action-s">about</a></li>
+					<li><a href="./home.html#best" class="nav-item action-s">best</a></li>
+					<li><a href="#contact" class="nav-item action-s">contacts</a></li>
 				</ul>
 			</nav>
 		</header>
