fix: add style to ul in main, rework gift-card's contents (replace img with div with corresponding bg, add texts)

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -31,7 +31,7 @@
 		<main class="gifts-main">
 			<h1 class="light">Achieve health,<br> harmony, and<br> inner strength</h1>
 
-			<ul class="nav-list">
+			<ul class="nav-list gifts-ul">
 				<li class="action-s light nav-gift-item-active">All</li>
 				<li class="action-s light nav-gift-item">For Work</li>
 				<li class="action-s light nav-gift-item">For Health</li>
@@ -40,10 +40,13 @@
 
 			<div class="gifts-container">
 				<div class="gift-card">
-					<img src="./assets/png/gift/for-work.png" class="gift-pic" alt="Gift">
+					<div class="gift-pic pic-work">
+						&nbsp;
+					</div>
+
 					<div class="gift-text">
-						<h4 class="work"></h4>
-						<h3 class="dark"></h3>
+						<h4 class="work">For work</h4>
+						<h3 class="dark">Console.log Guru</h3>
 					</div>
 				</div>
 			</div>
