--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -39,7 +39,7 @@
 			</ul>
 
 			<div class="gifts-container">
-				<div class="gift-card">
+				<button class="gift-card">
 					<div class="gift-pic pic-work">
 						&nbsp;
 					</div>
@@ -48,7 +48,7 @@
 						<h4 class="work">For work</h4>
 						<h3 class="dark">Console.log Guru</h3>
 					</div>
-				</div>
+				</button>
 			</div>
 		</main>
 		
