feat: add more gift-cards into gifts-container

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -49,6 +49,131 @@
 						<h3 class="dark">Console.log Guru</h3>
 					</div>
 				</button>
+
+				<button class="gift-card">
+					<div class="gift-pic pic-work">
+						&nbsp;
+					</div>
+
+					<div class="gift-text">
+						<h4 class="work">For work</h4>
+						<h3 class="dark">Console.log Guru</h3>
+					</div>
+				</button>
+
+				<button class="gift-card">
+					<div class="gift-pic pic-work">
+						&nbsp;
+					</div>
+
+					<div class="gift-text">
+						<h4 class="work">For work</h4>
+						<h3 class="dark">Console.log Guru</h3>
+					</div>
+				</button>
+
+				<button class="gift-card">
+					<div class="gift-pic pic-work">
+						&nbsp;
+					</div>
+
+					<div class="gift-text">
+						<h4 class="work">For work</h4>
+						<h3 class="dark">Console.log Guru</h3>
+					</div>
+				</button>
+
+				<!-- First Row End -->
+
+				<button class="gift-card">
+					<div class="gift-pic pic-work">
+						&nbsp;
+					</div>
+
+					<div class="gift-text">
+						<h4 class="work">For work</h4>
+						<h3 class="dark">Console.log Guru</h3>
+					</div>
+				</button>
+
+				<button class="gift-card">
+					<div class="gift-pic pic-work">
+						&nbsp;
+					</div>
+
+					<div class="gift-text">
+						<h4 class="work">For work</h4>
+						<h3 class="dark">Console.log Guru</h3>
+					</div>
+				</button>
+
+				<button class="gift-card">
+					<div class="gift-pic pic-work">
+						&nbsp;
+					</div>
+
+					<div class="gift-text">
+						<h4 class="work">For work</h4>
+						<h3 class="dark">Console.log Guru</h3>
+					</div>
+				</button>
+
+				<button class="gift-card">
+					<div class="gift-pic pic-work">
+						&nbsp;
+					</div>
+
+					<div class="gift-text">
+						<h4 class="work">For work</h4>
+						<h3 class="dark">Console.log Guru</h3>
+					</div>
+				</button>
+
+				<!-- Second Row End -->
+
+				<button class="gift-card">
+					<div class="gift-pic pic-work">
+						&nbsp;
+					</div>
+
+					<div class="gift-text">
+						<h4 class="work">For work</h4>
+						<h3 class="dark">Console.log Guru</h3>
+					</div>
+				</button>
+
+				<button class="gift-card">
+					<div class="gift-pic pic-work">
+						&nbsp;
+					</div>
+
+					<div class="gift-text">
+						<h4 class="work">For work</h4>
+						<h3 class="dark">Console.log Guru</h3>
+					</div>
+				</button>
+
+				<button class="gift-card">
+					<div class="gift-pic pic-work">
+						&nbsp;
+					</div>
+
+					<div class="gift-text">
+						<h4 class="work">For work</h4>
+						<h3 class="dark">Console.log Guru</h3>
+					</div>
+				</button>
+
+				<button class="gift-card">
+					<div class="gift-pic pic-work">
+						&nbsp;
+					</div>
+
+					<div class="gift-text">
+						<h4 class="work">For work</h4>
+						<h3 class="dark">Console.log Guru</h3>
+					</div>
+				</button>
 			</div>
 		</main>
 		
