feat: add slider section

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -49,6 +49,28 @@
 					<img src="./assets/png/santa.png" class="pic" alt="Snowperson with Santa">
 				</div>
 			</section>
+
+			<section class="slider">
+
+				<p class="caption light">Become Happier!</p>
+				<h2 class="light">in the new 2025</h2>
+
+				<div class="slider-div">
+					<p class="slider-text light">Live</p>
+					<div class="slider-img one">&nbsp;</div>
+					<p class="slider-text light">Create</p>
+					<div class="slider-img two">&nbsp;</div>
+					<p class="slider-text light">Love</p>
+					<div class="slider-img three">&nbsp;</div>
+					<p class="slider-text light">Dream</p>
+					<div class="slider-img four">&nbsp;</div>
+				</div>
+
+				<div class="pagination">
+					<button class="arrow" disabled><img src="./assets/svg/arrow-left.svg" class="arrow-svg" alt="Left Arrow"></button>
+					<button class="arrow"><img src="./assets/svg/arrow-right.svg" class="arrow-svg" alt="Right Arrow"></button>
+				</div>
+			</section>
 		</main>
 		
 		<footer id="contact">
