fix: change gift-cards from button elements to articles

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -39,7 +39,7 @@
 			</ul>
 
 			<div class="gifts-container">
-				<button class="gift-card">
+				<article class="gift-card">
 					<div class="gift-pic pic-work">
 						&nbsp;
 					</div>
@@ -48,9 +48,9 @@
 						<h4 class="work">For work</h4>
 						<h3 class="dark">Console.log Guru</h3>
 					</div>
-				</button>
+				</article>
 
-				<button class="gift-card">
+				<article class="gift-card">
 					<div class="gift-pic pic-work">
 						&nbsp;
 					</div>
@@ -59,9 +59,9 @@
 						<h4 class="work">For work</h4>
 						<h3 class="dark">Console.log Guru</h3>
 					</div>
-				</button>
+				</article>
 
-				<button class="gift-card">
+				<article class="gift-card">
 					<div class="gift-pic pic-work">
 						&nbsp;
 					</div>
@@ -70,9 +70,9 @@
 						<h4 class="work">For work</h4>
 						<h3 class="dark">Console.log Guru</h3>
 					</div>
-				</button>
+				</article>
 
-				<button class="gift-card">
+				<article class="gift-card">
 					<div class="gift-pic pic-work">
 						&nbsp;
 					</div>
@@ -81,11 +81,11 @@
 						<h4 class="work">For work</h4>
 						<h3 class="dark">Console.log Guru</h3>
 					</div>
-				</button>
+				</article>
 
 				<!-- First Row End -->
 
-				<button class="gift-card">
+				<article class="gift-card">
 					<div class="gift-pic pic-work">
 						&nbsp;
 					</div>
@@ -94,9 +94,9 @@
 						<h4 class="work">For work</h4>
 						<h3 class="dark">Console.log Guru</h3>
 					</div>
-				</button>
+				</article>
 
-				<button class="gift-card">
+				<article class="gift-card">
 					<div class="gift-pic pic-work">
 						&nbsp;
 					</div>
@@ -105,9 +105,9 @@
 						<h4 class="work">For work</h4>
 						<h3 class="dark">Console.log Guru</h3>
 					</div>
-				</button>
+				</article>
 
-				<button class="gift-card">
+				<article class="gift-card">
 					<div class="gift-pic pic-work">
 						&nbsp;
 					</div>
@@ -116,9 +116,9 @@
 						<h4 class="work">For work</h4>
 						<h3 class="dark">Console.log Guru</h3>
 					</div>
-				</button>
+				</article>
 
-				<button class="gift-card">
+				<article class="gift-card">
 					<div class="gift-pic pic-work">
 						&nbsp;
 					</div>
@@ -127,11 +127,11 @@
 						<h4 class="work">For work</h4>
 						<h3 class="dark">Console.log Guru</h3>
 					</div>
-				</button>
+				</article>
 
 				<!-- Second Row End -->
 
-				<button class="gift-card">
+				<article class="gift-card">
 					<div class="gift-pic pic-work">
 						&nbsp;
 					</div>
@@ -140,9 +140,9 @@
 						<h4 class="work">For work</h4>
 						<h3 class="dark">Console.log Guru</h3>
 					</div>
-				</button>
+				</article>
 
-				<button class="gift-card">
+				<article class="gift-card">
 					<div class="gift-pic pic-work">
 						&nbsp;
 					</div>
@@ -151,9 +151,9 @@
 						<h4 class="work">For work</h4>
 						<h3 class="dark">Console.log Guru</h3>
 					</div>
-				</button>
+				</article>
 
-				<button class="gift-card">
+				<article class="gift-card">
 					<div class="gift-pic pic-work">
 						&nbsp;
 					</div>
@@ -162,9 +162,9 @@
 						<h4 class="work">For work</h4>
 						<h3 class="dark">Console.log Guru</h3>
 					</div>
-				</button>
+				</article>
 
-				<button class="gift-card">
+				<article class="gift-card">
 					<div class="gift-pic pic-work">
 						&nbsp;
 					</div>
@@ -173,7 +173,7 @@
 						<h4 class="work">For work</h4>
 						<h3 class="dark">Console.log Guru</h3>
 					</div>
-				</button>
+				</article>
 			</div>
 		</main>
 		
