feat: add best section

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -71,6 +71,58 @@
 					<button class="arrow"><img src="./assets/svg/arrow-right.svg" class="arrow-svg" alt="Right Arrow"></button>
 				</div>
 			</section>
+
+			<section class="best" id="best">
+				<p class="caption light">Best Gifts</p>
+
+				<h2 class="light">Especially for you</h2>
+
+				<div class="best-gifts">
+					<article class="gift-card">
+						<div class="gift-pic pic-work">
+							&nbsp;
+						</div>
+
+						<div class="gift-text">
+							<h4 class="work">For work</h4>
+							<h3 class="dark">Console.log Guru</h3>
+						</div>
+					</article>
+
+					<article class="gift-card">
+						<div class="gift-pic pic-work">
+							&nbsp;
+						</div>
+
+						<div class="gift-text">
+							<h4 class="work">For work</h4>
+							<h3 class="dark">Console.log Guru</h3>
+						</div>
+					</article>
+
+					<article class="gift-card">
+						<div class="gift-pic pic-work">
+							&nbsp;
+						</div>
+
+						<div class="gift-text">
+							<h4 class="work">For work</h4>
+							<h3 class="dark">Console.log Guru</h3>
+						</div>
+					</article>
+
+					<article class="gift-card">
+						<div class="gift-pic pic-work">
+							&nbsp;
+						</div>
+
+						<div class="gift-text">
+							<h4 class="work">For work</h4>
+							<h3 class="dark">Console.log Guru</h3>
+						</div>
+					</article>
+				</div>
+			</section>
 		</main>
 		
 		<footer id="contact">
