feat: add CTA section with its contents

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -123,6 +123,35 @@
 					</article>
 				</div>
 			</section>
+
+			<section class="CTA">
+				<h2 class="light">Ready to start your <br>journey to a better <br>version of yourself?</h2>
+
+				<a href="./gifts.html" class="action-s btn-explore">Explore Magical Gifts</a>
+
+				<div class="timer-wrap">
+					<p class="caption light">The New Year is Coming Soon...</p>
+
+					<div class="timer">
+						<div class="cell">
+							<h2 class="light">47</h2>
+							<h4 class="light">days</h4>
+						</div>
+						<div class="cell">
+							<h2 class="light">5</h2>
+							<h4 class="light">hours</h4>
+						</div>
+						<div class="cell">
+							<h2 class="light">34</h2>
+							<h4 class="light">minutes</h4>
+						</div>
+						<div class="cell">
+							<h2 class="light">12</h2>
+							<h4 class="light">seconds</h4>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		
 		<footer id="contact">
