fix: make specific h2 (in CTA section) to be centered

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -125,7 +125,7 @@
 			</section>
 
 			<section class="CTA">
-				<h2 class="light">Ready to start your <br>journey to a better <br>version of yourself?</h2>
+				<h2 class="light" style="text-align: center;">Ready to start your <br>journey to a better <br>version of yourself?</h2>
 
 				<a href="./gifts.html" class="action-s btn-explore">Explore Magical Gifts</a>
 
