feat: add span-elements as separator-lines to timer

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -137,14 +137,23 @@
 							<h2 class="light">47</h2>
 							<h4 class="light">days</h4>
 						</div>
+
+						<span class="line"></span>
+
 						<div class="cell">
 							<h2 class="light">5</h2>
 							<h4 class="light">hours</h4>
 						</div>
+
+						<span class="line"></span>
+
 						<div class="cell">
 							<h2 class="light">34</h2>
 							<h4 class="light">minutes</h4>
 						</div>
+
+						<span class="line"></span>
+						
 						<div class="cell">
 							<h2 class="light">12</h2>
 							<h4 class="light">seconds</h4>
