fix: make gift-cards different on home page

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -90,13 +90,13 @@
 					</article>
 
 					<article class="gift-card">
-						<div class="gift-pic pic-work">
+						<div class="gift-pic pic-health">
 							&nbsp;
 						</div>
 
 						<div class="gift-text">
-							<h4 class="work">For work</h4>
-							<h3 class="dark">Console.log Guru</h3>
+							<h4 class="health">For health</h4>
+							<h3 class="dark">Hydration Bot</h3>
 						</div>
 					</article>
 
@@ -107,18 +107,18 @@
 
 						<div class="gift-text">
 							<h4 class="work">For work</h4>
-							<h3 class="dark">Console.log Guru</h3>
+							<h3 class="dark">Merge Master</h3>
 						</div>
 					</article>
 
 					<article class="gift-card">
-						<div class="gift-pic pic-work">
+						<div class="gift-pic pic-harmony">
 							&nbsp;
 						</div>
 
 						<div class="gift-text">
-							<h4 class="work">For work</h4>
-							<h3 class="dark">Console.log Guru</h3>
+							<h4 class="harmony">For harmony</h4>
+							<h3 class="dark">Spontaneous Coding Philosopher</h3>
 						</div>
 					</article>
 				</div>
@@ -153,7 +153,7 @@
 						</div>
 
 						<span class="line"></span>
-						
+
 						<div class="cell">
 							<h2 class="light">12</h2>
 							<h4 class="light">seconds</h4>
