fix: make gift-cards different on gifts page

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -51,13 +51,13 @@
 				</article>
 
 				<article class="gift-card">
-					<div class="gift-pic pic-work">
+					<div class="gift-pic pic-health">
 						&nbsp;
 					</div>
 
 					<div class="gift-text">
-						<h4 class="work">For work</h4>
-						<h3 class="dark">Console.log Guru</h3>
+						<h4 class="health">For health</h4>
+						<h3 class="dark">Step Master</h3>
 					</div>
 				</article>
 
@@ -68,7 +68,7 @@
 
 					<div class="gift-text">
 						<h4 class="work">For work</h4>
-						<h3 class="dark">Console.log Guru</h3>
+						<h3 class="dark">Bug Magnet</h3>
 					</div>
 				</article>
 
@@ -79,66 +79,66 @@
 
 					<div class="gift-text">
 						<h4 class="work">For work</h4>
-						<h3 class="dark">Console.log Guru</h3>
+						<h3 class="dark">Shortcut Cheater</h3>
 					</div>
 				</article>
 
 				<!-- First Row End -->
 
 				<article class="gift-card">
-					<div class="gift-pic pic-work">
+					<div class="gift-pic pic-health">
 						&nbsp;
 					</div>
 
 					<div class="gift-text">
-						<h4 class="work">For work</h4>
-						<h3 class="dark">Console.log Guru</h3>
+						<h4 class="health">For health</h4>
+						<h3 class="dark">Posture Levitation</h3>
 					</div>
 				</article>
 
 				<article class="gift-card">
-					<div class="gift-pic pic-work">
+					<div class="gift-pic pic-harmony">
 						&nbsp;
 					</div>
 
 					<div class="gift-text">
-						<h4 class="work">For work</h4>
-						<h3 class="dark">Console.log Guru</h3>
+						<h4 class="harmony">For harmony</h4>
+						<h3 class="dark">Bug Acceptance Guru</h3>
 					</div>
 				</article>
 
 				<article class="gift-card">
-					<div class="gift-pic pic-work">
+					<div class="gift-pic pic-health">
 						&nbsp;
 					</div>
 
 					<div class="gift-text">
-						<h4 class="work">For work</h4>
-						<h3 class="dark">Console.log Guru</h3>
+						<h4 class="health">For health</h4>
+						<h3 class="dark">Snack Resister</h3>
 					</div>
 				</article>
 
 				<article class="gift-card">
-					<div class="gift-pic pic-work">
+					<div class="gift-pic pic-harmony">
 						&nbsp;
 					</div>
 
 					<div class="gift-text">
-						<h4 class="work">For work</h4>
-						<h3 class="dark">Console.log Guru</h3>
+						<h4 class="harmony">For harmony</h4>
+						<h3 class="dark">Error Laugher</h3>
 					</div>
 				</article>
 
 				<!-- Second Row End -->
 
 				<article class="gift-card">
-					<div class="gift-pic pic-work">
+					<div class="gift-pic pic-health">
 						&nbsp;
 					</div>
 
 					<div class="gift-text">
-						<h4 class="work">For work</h4>
-						<h3 class="dark">Console.log Guru</h3>
+						<h4 class="health">For health</h4>
+						<h3 class="dark">Hydration Bot</h3>
 					</div>
 				</article>
 
@@ -149,29 +149,29 @@
 
 					<div class="gift-text">
 						<h4 class="work">For work</h4>
-						<h3 class="dark">Console.log Guru</h3>
+						<h3 class="dark">Merge Master</h3>
 					</div>
 				</article>
 
 				<article class="gift-card">
-					<div class="gift-pic pic-work">
+					<div class="gift-pic pic-harmony">
 						&nbsp;
 					</div>
 
 					<div class="gift-text">
-						<h4 class="work">For work</h4>
-						<h3 class="dark">Console.log Guru</h3>
+						<h4 class="harmony">For harmony</h4>
+						<h3 class="dark">Joy Charger</h3>
 					</div>
 				</article>
 
 				<article class="gift-card">
-					<div class="gift-pic pic-work">
+					<div class="gift-pic pic-harmony">
 						&nbsp;
 					</div>
 
 					<div class="gift-text">
-						<h4 class="work">For work</h4>
-						<h3 class="dark">Console.log Guru</h3>
+						<h4 class="harmony">For harmony</h4>
+						<h3 class="dark">Spontaneous Coding Philosopher</h3>
 					</div>
 				</article>
 			</div>
