--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="!#" class="logo-link">
+			<a href="#!" class="logo-link">
 			<div class="logo-div">
 				<img src="./assets/svg/snowflake.svg" alt="Snowflake" class="icon">
 				<h2 class="action-s">the gifts</h2>
