feat: add burger-menu

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -26,6 +26,11 @@
 					<li><a href="#contact" class="nav-item action-s">contacts</a></li>
 				</ul>
 			</nav>
+
+			<div class="burger">
+				<span class="burger-line"></span>
+				<span class="burger-line"></span>
+			</div>
 		</header>
 		
 		<main class="gifts-main">
