--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -7,6 +7,8 @@
 		<meta content="width=device-width, initial-scale=1, minimum-scale=1" name="viewport">
     
 		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="media.css">
+		
 		<link rel="icon" href="./assets/favicon.ico">
 	</head>
 	<body>
