fix: change img element to div with background

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -53,7 +53,7 @@
 						<p class="dark">This New Year marks the beginning of your journey to inner harmony and new strengths. We offer unique gifts that will help you improve your life.</p>
 					</div>
 
-					<img src="./assets/png/santa.png" class="pic" alt="Snowperson with Santa">
+					<div class="pic">&nbsp;</div>
 				</div>
 			</section>
 
