fix: add div with new class around h1

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -36,7 +36,9 @@
 		</header>
 		
 		<main class="gifts-main">
-			<h1 class="light">Achieve health,<br> harmony, and<br> inner strength</h1>
+			<div class="gifts-text">
+				<h1 class="light">Achieve health,<br> harmony, and<br> inner strength</h1>
+			</div>
 
 			<ul class="nav-list gifts-ul">
 				<li class="action-s light nav-gift-item-active">All</li>
