feat: add toTop button

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -184,6 +184,10 @@
 					</div>
 				</article>
 			</div>
+
+			<button class="arrow-up" onclick="scrollUp()">
+				<img src="./assets/svg/arrow-up.svg" class="icon" alt="UP">
+			</button>
 		</main>
 		
 		<footer id="contact">
