feat: add ids and onclick events to pagination-buttons in slider-section

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -74,8 +74,8 @@
 				</div>
 
 				<div class="pagination">
-					<button class="arrow" disabled><img src="./assets/svg/arrow-left.svg" class="arrow-svg" alt="Left Arrow"></button>
-					<button class="arrow"><img src="./assets/svg/arrow-right.svg" class="arrow-svg" alt="Right Arrow"></button>
+					<button id="left-arrow" onclick="leftPag()" class="arrow" disabled><img src="./assets/svg/arrow-left.svg" class="arrow-svg" alt="Left Arrow"></button>
+					<button id="right-arrow" onclick="rightPag()" class="arrow"><img src="./assets/svg/arrow-right.svg" class="arrow-svg" alt="Right Arrow"></button>
 				</div>
 			</section>
 
