feat: add mobile-menu, add onclick event to burger div, add ids to burger-lines

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -29,9 +29,18 @@
 				</ul>
 			</nav>
 
-			<div class="burger">
-				<span class="burger-line"></span>
-				<span class="burger-line"></span>
+			<div class="burger" onclick="burger()">
+				<span id="up-line" class="burger-line"></span>
+				<span id="bot-line" class="burger-line"></span>
+			</div>
+
+			<div class="mob-menu">
+				<ul class="nav-list mob-nav">
+					<li><a href="./gifts.html" class="nav-item action-l" onclick="burger()">gifts</a></li>
+					<li><a href="#about" class="nav-item action-l" onclick="burger()">about</a></li>
+					<li><a href="#best" class="nav-item action-l" onclick="burger()">best</a></li>
+					<li><a href="#contact" class="nav-item action-l" onclick="burger()">contacts</a></li>
+				</ul>
 			</div>
 		</header>
 		
