fix: change li-s to be buttons in li-s

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -50,10 +50,10 @@
 			</div>
 
 			<ul class="nav-list gifts-ul">
-				<li class="action-s light nav-gift-item-active">All</li>
-				<li class="action-s light nav-gift-item">For Work</li>
-				<li class="action-s light nav-gift-item">For Health</li>
-				<li class="action-s light nav-gift-item">For Harmony</li>
+				<li><button id="btn-all" class="action-s light nav-gift-item-active" disabled>All</button></li>
+				<li><button id="btn-work" class="action-s light nav-gift-item">For Work</button></li>
+				<li><button id="btn-health" class="action-s light nav-gift-item">For Health</button></li>
+				<li><button id="btn-harmony" class="action-s light nav-gift-item">For Harmony</button></li>
 			</ul>
 
 			<div class="gifts-container">
