feat: add modal-window

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -198,6 +198,12 @@
 				<img src="./assets/svg/arrow-up.svg" class="icon" alt="UP">
 			</button>
 		</main>
+
+		<div class="modal">
+			<div class="wrap">
+				&nbsp;
+			</div>
+		</div>
 		
 		<footer id="contact">
 			<div class="contacts">
