--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -50,10 +50,10 @@
 			</div>
 
 			<ul class="nav-list gifts-ul">
-				<li><button id="btn-all" class="action-s light nav-gift-item-active" disabled>All</button></li>
-				<li><button id="btn-work" class="action-s light nav-gift-item">For Work</button></li>
-				<li><button id="btn-health" class="action-s light nav-gift-item">For Health</button></li>
-				<li><button id="btn-harmony" class="action-s light nav-gift-item">For Harmony</button></li>
+				<li><button id="btn-all" class="action-s light nav-gift-item-active" onclick="showGifts()" disabled>All</button></li>
+				<li><button id="btn-work" class="action-s light nav-gift-item" onclick="showWork()">For Work</button></li>
+				<li><button id="btn-health" class="action-s light nav-gift-item"onclick="showHealth()">For Health</button></li>
+				<li><button id="btn-harmony" class="action-s light nav-gift-item"onclick="showHarmony()">For Harmony</button></li>
 			</ul>
 
 			<div class="gifts-container">
