fix: remove disabled label from All button

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -50,7 +50,7 @@
 			</div>
 
 			<ul class="nav-list gifts-ul">
-				<li><button id="btn-all" class="action-s light nav-gift-item-active" onclick="showGifts(data)" disabled>All</button></li>
+				<li><button id="btn-all" class="action-s light nav-gift-item-active" onclick="showGifts(data)">All</button></li>
 				<li><button id="btn-work" class="action-s light nav-gift-item" onclick="showWork(data)">For Work</button></li>
 				<li><button id="btn-health" class="action-s light nav-gift-item"onclick="showHealth(data)">For Health</button></li>
 				<li><button id="btn-harmony" class="action-s light nav-gift-item"onclick="showHarmony(data)">For Harmony</button></li>
