feat: add ids to timer-cells

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -150,28 +150,28 @@
 
 					<div class="timer">
 						<div class="cell">
-							<h2 class="light">47</h2>
+							<h2 class="light" id="d">47</h2>
 							<h4 class="light">days</h4>
 						</div>
 
 						<span class="line"></span>
 
 						<div class="cell">
-							<h2 class="light">5</h2>
+							<h2 class="light" id="h">5</h2>
 							<h4 class="light">hours</h4>
 						</div>
 
 						<span class="line"></span>
 
 						<div class="cell">
-							<h2 class="light">34</h2>
+							<h2 class="light" id="m">34</h2>
 							<h4 class="light">minutes</h4>
 						</div>
 
 						<span class="line"></span>
 
 						<div class="cell">
-							<h2 class="light">12</h2>
+							<h2 class="light" id="s">12</h2>
 							<h4 class="light">seconds</h4>
 						</div>
 					</div>
