feat: add modal-window starting code snippet

--- a/christmas-shop/home.html
+++ b/christmas-shop/home.html
@@ -178,6 +178,12 @@
 				</div>
 			</section>
 		</main>
+
+		<div class="modal">
+			<div class="wrap">
+				&nbsp;
+			</div>
+		</div>
 		
 		<footer id="contact">
 			<div class="contacts">
